# barscock-compiler

./: .env.example  .gitignore  Readme.md  docker-compose.yml  Барсков-итог.docx  Барсков.docx
backend/: .env.example  Dockerfile  code.txt  entrypoint.sh  pyproject.toml
backend/res/: tl.txt  tw.txt
backend/src/: __init__.py  conf.py  config.py  files.py  main.py  schema.py
backend/src/analyzer/: const.py  lexical.py  main.py
backend/src/analyzer/lex/: __init__.py  analyze.py  file.py  writer.py
backend/src/analyzer/lexical/: __init__.py  const.py  lexical_analyzer.py  reader.py
backend/src/analyzer/lexical/sub/: sub.py
backend/src/analyzer/semantic/: identifier.py
backend/src/analyzer/symantic/: files.py  types.py
backend/src/analyzer/symantic/analyzer/: expression.py  identifier.py  symantic_analyzer.py  type.py  utils.py
backend/src/analyzer/syntax/: analyze.py  expression.py  identifier.py  identifiers.py  parser.py  reader.py  state.py  syntax_analyzer.py  tools.py
backend/src/analyzer/translator/node/: arithmetic.py  boolean_operations.py  default.py  id.py  node.py
backend/src/analyzer_v2/: __init__.py  main.py  utils.py
backend/src/analyzer_v2/lex/: __init__.py  analyze.py
backend/src/analyzer_v2/semantic/: expression.py  identifier.py
backend/src/analyzer_v2/syntax/: analyze.py  exceptions.py  identifiers.py  parser.py
backend/src/analyzer_v2/translator/node/: arithmetic.py  boolean_operations.py  (+3 more)
backend/tests/: lex_analyzer_test.py  symantic_analyzer_test.py  syntax_analyzer_test.py
backend/tests/v2/: asm_generator_test.py
(+24 files in other folders)
